--- a/Front/Projetos/bingo/index.html
+++ b/Front/Projetos/bingo/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sorteador de Bingo</title>
+  <title>Bingo</title>
   <script src=".\script.js" defer></script>
   <link rel="stylesheet" href="style.css"/> 
 <body>
-  <h1>Sorteador de Bingo</h1>
+  <h1>Bingo</h1>
   <div class="numero-sorteado" id="numeroAtual">--</div>
   <button onclick="sortearNumero()">Sortear Número</button>
   <button onclick="reiniciar()">Reiniciar</button>
