--- a/Front/Projetos/bingo2/index.html
+++ b/Front/Projetos/bingo2/index.html
@@ -12,7 +12,38 @@
   <button onclick="sortearNumero()">Sortear Número</button>
   <button onclick="reiniciar()">Reiniciar</button>
 
-  <div class="numeros" id="listaNumeros"></div>
+  <div class="bingo">
+    <div class="coluna" id="listaColuna">
+      <div class="letraClass" id="letra">
+        <h1>B</h1>
+      </div>
+      <div class="numeros" id="listaNumerosB"></div>
+    </div>
+    <div class="coluna" id="listaColuna">
+      <div class="letraClass" id="letra">
+        <h1>I</h1>
+      </div>
+      <div class="numeros" id="listaNumerosI"></div>
+    </div>
+    <div class="coluna" id="listaColuna">
+      <div class="letraClass" id="letra">
+        <h1>N</h1>
+      </div>
+      <div class="numeros" id="listaNumerosN"></div>
+    </div>
+    <div class="coluna" id="listaColuna">
+      <div class="letraClass" id="letra">
+        <h1>G</h1>
+      </div>
+      <div class="numeros" id="listaNumerosG"></div>
+    </div>
+    <div class="coluna" id="listaColuna">
+      <div class="letraClass" id="letra">
+        <h1>O</h1>
+      </div>
+      <div class="numeros" id="listaNumerosO"></div>
+    </div>
+  </div>
 
 </body>
 </html>
