--- a/Front/Projetos/bingoOf/index.html
+++ b/Front/Projetos/bingoOf/index.html
@@ -1,45 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bingo</title>
-  <script src=".\script.js" defer></script>
-  <link rel="stylesheet" href="style.css"/>
-   
-<body>
-  <h1>Bingo</h1>
-  <article class="numero-sorteado" id="numeroAtual">--</article>
-  <button onclick="sortearNumero()">Sortear Número</button>
-  <button onclick="reiniciar()">Reiniciar</button>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bingo</title>
+    <script src=".\script.js" defer></script>
+    <link rel="stylesheet" href="style.css"/>
+    
+  <!-- Conteúdo principal -->
+  <body>
+    <!-- Título -->
+    <h1>Leviathan da Sorte</h1>
+    <!--Número sorteado-->
+    <h1 class="numero-sorteado" id="numeroAtual">--</h1>
+    <!--Botão de sorteio-->
+    <button id="sortearNumero">Sortear Número</button>
+    <!--Botão de reiniciar-->
+    <button id="reiniciarJogo">Reiniciar</button>
 
-  <div class="bingo">
+    <!--Conteúdo do sorteio do bingo, dividido por colunas de acordo com as letras BINGO-->
+    <div class="bingo">
 
-    <section class="coluna" id="listaColuna">
-      <h1>B</h1>
-      <div class="numeros" id="listaNumerosB"></div>
-    </section>
+      <section class="coluna" id="listaColuna">
+        <h1>B</h1>
+        <div class="numeros" id="listaNumerosB"></div>
+      </section>
 
-    <section class="coluna" id="listaColuna">
-      <h1>I</h1>
-      <div class="numeros" id="listaNumerosI"></div>
-    </section>
+      <section class="coluna" id="listaColuna">
+        <h1>I</h1>
+        <div class="numeros" id="listaNumerosI"></div>
+      </section>
 
-    <section class="coluna" id="listaColuna">
-      <h1>N</h1>
-      <div class="numeros" id="listaNumerosN"></div>
-    </section>
+      <section class="coluna" id="listaColuna">
+        <h1>N</h1>
+        <div class="numeros" id="listaNumerosN"></div>
+      </section>
 
-    <section class="coluna" id="listaColuna">
-      <h1>G</h1>
-      <div class="numeros" id="listaNumerosG"></div>
-    </section>
+      <section class="coluna" id="listaColuna">
+        <h1>G</h1>
+        <div class="numeros" id="listaNumerosG"></div>
+      </section>
 
-    <section class="coluna" id="listaColuna">
-      <h1>O</h1>
-      <div class="numeros" id="listaNumerosO"></div>
-    </section>
-  </div>
+      <section class="coluna" id="listaColuna">
+        <h1>O</h1>
+        <div class="numeros" id="listaNumerosO"></div>
+      </section>
+    </div>
 
-</body>
+  </body>
 </html>
