--- a/Back/WEBSERVER/listar_filmes.html
+++ b/Back/WEBSERVER/listar_filmes.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Listar Filmes</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <!--Título da págin-->
-    <h1>Bem vindo a página de Filmes</h1>
+    <!--Título da página-->
+    <h1>Filmes que temos</h1>
 </body>
 </html>
