--- a/Back/WEBSERVER/login.html
+++ b/Back/WEBSERVER/login.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
-    <!--Título da página-->
-    <h1>Login do Site de Filmes</h1>
-    <!--Formulário de login de usuário com opção de entrar no sistema e recuperação de senha-->
-    <form>
-        <label>Usuário</label>
-        <input placeholder="Usuário"/>
-        <label>Senha</label>
-        <input placeholder="Senha"/>
-        <button>Entrar</button>
-        <a href="#">Esqueci minha senha</a>
-    </form>
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+        <link rel="stylesheet" href="style.css"/>
+    </head>
+    <body>
+        <main>
+            <!--Título da página-->
+            <h1>Login do Site de Filmes</h1>
+            <!--Formulário de login de usuário com opção de entrar no sistema e recuperação de senha-->
+            <form>
+                <label>Usuário</label>
+                <input placeholder="Usuário"/>
+                <label>Senha</label>
+                <input placeholder="Senha"/>
+                <button>Entrar</button>
+                <a href="#">Esqueci minha senha</a>
+            </form>
+        </main>
+    </body>
 </html>
