--- a/Back/WEBSERVER/listar_filmes.html
+++ b/Back/WEBSERVER/listar_filmes.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listar Filmes</title>
-    <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
-    <!--Título da página-->
-    <h1>Filmes que temos</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Listar Filmes</title>
+        <link rel="stylesheet" href="style.css"/>
+    </head>
+    <body>
+        <main>
+            <!--Título da página-->
+            <h1>Filmes que temos</h1>
+        </main>
+    </body>
 </html>
