--- a/Back/WEBSERVER/cadastro.html
+++ b/Back/WEBSERVER/cadastro.html
@@ -11,21 +11,21 @@
             <!--Título da página-->
             <h1>Cadastro de filmes</h1>
             <!--Formulário de cadastro de filmes com opção de cadastro-->
-            <form>
+            <form action = "send_filme" method="post">
                 <label>Nome do filme</label>
-                <input placeholder="Nome do filme"/>
+                <input placeholder="Nome do filme" name="nome_filme"/>
                 <label>Atores</label>
-                <input placeholder="Atores"/>
+                <input placeholder="Atores" name="atores"/>
                 <label>Diretor</label>
-                <input placeholder="Diretor"/>
+                <input placeholder="Diretor" name="diretor"/>
                 <label>Ano</label>
-                <input placeholder="Ano"/>
+                <input placeholder="Ano" name="ano_lancamento"/>
                 <label>Gênero</label>
-                <input placeholder="Gênero"/>
+                <input placeholder="Gênero" name="genero"/>
                 <label>Produtora</label>
-                <input placeholder="Produtora"/>
+                <input placeholder="Produtora" name="produtora"/>
                 <label>Sinopse</label>
-                <textarea placeholder="Sinopse"></textarea>
+                <textarea placeholder="Sinopse" name="sinopse"></textarea>
                 <button>Cadastrar</button>
             </form>
         </main>
