--- a/Back/WEBSERVER/login.html
+++ b/Back/WEBSERVER/login.html
@@ -17,7 +17,7 @@
                 <label>Senha</label>
                 <input placeholder="Senha" name="senha"/>
                 <button type="submit">Entrar</button>
-                <a href="#">Esqueci minha senha</a>
+                <a href="">Esqueci minha senha</a>
             </form>
         </main>
     </body>
