--- a/Back/WEBSERVER/cadastro.html
+++ b/Back/WEBSERVER/cadastro.html
@@ -11,7 +11,7 @@
             <!--Título da página-->
             <h1>Cadastro de filmes</h1>
             <!--Formulário de cadastro de filmes com opção de cadastro-->
-            <form action = "send_filme" method="post">
+            <form action = "send_filme_mari" method="post">
                 <label>Nome do filme</label>
                 <input placeholder="Nome do filme" name="nome_filme"/>
                 <label>Atores</label>
