--- a/Back/WEBSERVER/listar_filmes.html
+++ b/Back/WEBSERVER/listar_filmes.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Listar Filmes</title>
+        <script defer src="script.js"></script>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <main>
             <!--Título da página-->
             <h1>Filmes que temos</h1>
-            <!--FILMES-->
+            <ul id="idlistinea"></ul>
         </main>
     </body>
 </html>
