--- a/Back/WEBSERVER/listar_filmes_teste.html
+++ b/Back/WEBSERVER/listar_filmes_teste.html
@@ -4,14 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Listar Filmes</title>
-        <script defer src="script.js"></script>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <main>
             <!--Título da página-->
             <h1>Filmes que temos</h1>
-            <ul id="idlistinea"></ul>
+            <!--FILMES-->
         </main>
     </body>
 </html>
