--- a/Back/WEBSERVER/listar_filmes.html
+++ b/Back/WEBSERVER/listar_filmes.html
@@ -11,6 +11,7 @@
         <main>
             <!--Título da página-->
             <h1>Filmes que temos</h1>
+            <!--Elemento para o JS realizar operações-->
             <ul id="idlistinea"></ul>
         </main>
     </body>
