--- a/Back/WEBSERVER/cadastro.html
+++ b/Back/WEBSERVER/cadastro.html
@@ -12,20 +12,17 @@
             <h1>Cadastro de filmes</h1>
             <!--Formulário de cadastro de filmes com opção de cadastro-->
             <form action = "send_filme" method="post">
-                <label>Nome do filme</label>
-                <input placeholder="Nome do filme" name="nome_filme"/>
-                <label>Atores</label>
-                <input placeholder="Atores" name="atores"/>
-                <label>Diretor</label>
-                <input placeholder="Diretor" name="diretor"/>
-                <label>Ano</label>
-                <input placeholder="Ano" name="ano_lancamento"/>
-                <label>Gênero</label>
-                <input placeholder="Gênero" name="genero"/>
-                <label>Produtora</label>
-                <input placeholder="Produtora" name="produtora"/>
-                <label>Sinopse</label>
-                <textarea placeholder="Sinopse" name="sinopse"></textarea>
+                <label>Título do filme</label>
+                <input placeholder="Título do filme" name="titulo"/>
+                <label>Orçamento</label>
+                <input type="number" placeholder="Orçamento" name="orcamento"/>
+                <label>Tempo de Duração (Minutos)</label>
+                <input type="number" placeholder="Tempo de Duração em Minutos" name="tempo_duracao"/>
+                <label>Ano de Lançamento</label>
+                <input placeholder="Ano de Lançamento" name="ano"/>
+                <label>Poster</label>
+                <input placeholder="Poster" name="poster"/>
+
                 <button>Cadastrar</button>
             </form>
         </main>
